--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
+    "gulp": "^3.9.1",
+    "gulp-connect": "^5.5.0",
+    "gulp-typedoc": "^2.2.0",
+    "typedoc": "^0.11.1",
     "typescript": "~2.6.2"
   },
   "description": "An Ionic project"
